--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      				</div>
 				</div>
 				<div class="carousel-item">
-					<img src="file:///Library/Desktop%20Pictures/Blue%20Pond.jpg" alt="Carousel_pic_3" width="100%" height="300">
+					<img src="https://github.com/mathananya/pictures/blob/466dff8a541b23aaaab59ef5c3d7be7837bdaf14/Blue%20Pond.jpg" alt="Carousel_pic_3" width="100%" height="300">
 					<div class="carousel-caption" id= "pic3">
        					<h2></h2>
      				</div>
